# howl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README.pt-BR.md  TODO.md  classify.py  fetch.py  howl_overrides.example.json  interactive.py  main.py  pyproject.toml  requirements.txt  steam_collections.py  tui.py
.github/workflows/: ci.yml  publish.yml
docs/: pypi-publication.md
docs/superpowers/plans/: 2026-06-10-game-classifier.md  2026-06-11-todo-fixes.md  2026-06-12-bug-fixes-and-improvements.md
docs/superpowers/specs/: 2026-06-10-game-classifier-design.md  2026-06-10-todo-fixes-design.md
legacy/: how_long_to_beat.py  how_long_to_beat_minus_played_games.py
steam_hltb/: classify.py  cli.py  fetch.py  igdb.py  interactive.py  main.py  paths.py  score.py  selection.py  setup.py  setup_prompts.py  steam_collections.py  tui.py
steam_hltb/config/: paths.py  prompts.py  setup.py
steam_hltb/core/: classify.py  score.py  selection.py  types.py
steam_hltb/sources/: fetch.py  igdb.py
steam_hltb/ui/: args.py  interactive.py  report.py  tui.py
tests/: conftest.py  test_classify.py  test_fetch.py  test_igdb.py  test_integration.py  test_interactive.py  test_main.py  test_paths.py  test_score.py  test_selection.py  test_setup.py  test_setup_prompts.py  test_steam_collections.py  test_tui.py
tests/config/: test_paths.py  test_prompts.py  test_setup.py
tests/core/: test_score.py  test_selection.py
tests/sources/: test_collections.py  test_fetch.py  test_igdb.py
tests/ui/: test_args.py  test_interactive.py  test_report.py  test_tui.py
